--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -210,19 +210,12 @@ div#search_body label         { }
 div#search_body input         { }
 
 /* Shopping Cart */
-div#cart_container           { border:1px solid #0F0; }
-div#cart_container > div     { border:1px solid #F00; }
-
-div#billing_container        { border:1px solid #0F0; }
-tbody#billing_totals         { border:1px solid #00F; }
-tbody#billing_totals > tr    { border:1px solid #F00; }
-td#company_info              { border:1px solid #00F; }
 
 div#add_attendee_button      { width:200px; height:50px; }
 div#cart_container select    { width:200px; }
 
 div#cart_container           { position:relative; top:0px; }
-div#cart_container > div     { margin:5px; padding:5px; background:#eee; }
+div#cart_container > div     { margin:5px; padding:5px; background:#fff; }
 
 td#company_info { padding:10px; 0px; 10px; 10px; }
 tbody#billing_totals .program_title { padding:15px 0px 10px 10px; }
