--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -40,7 +40,7 @@ a.search_bar_print:hover      { background-image:url(../images/search_bar_print_
 #body                         { width:100%; }
 #content_top                  { position:relative; width:100%; height:329px; color:#fff; overflow:hidden; }
 body.blue_short #content_top  { position:relative; width:100%; height:100px; color:#fff; overflow:hidden; visibility:hidden; }
-body.blue_short #content_main_inner { padding-top:100px; }
+body.blue_short #content_main_inner { padding-top:0px; }
 #content_top div.summary      { position:absolute; top:87px; left:300px; width:634px; height:220px; overflow:hidden; vertical-align:top; }
 #content_top div.image        { position:absolute; top:87px; left:20px; width:260px; height:190px; border:1px solid #fff; }
 #content_top h1               { font-size:20px; font-weight:normal; padding:0 300px 10px 0; margin:0 0 20px 0; border-bottom:1px solid #fff; text-transform:uppercase; letter-spacing:0.05em; }
@@ -73,7 +73,8 @@ body.blue_short #content_main_inner { padding-top:100px; }
 
 /* Typography */
 h1.page_title                 { padding:30px 0px 25px 0px; color:#0f4964; font-size:18pt; line-height:18pt; text-transform:uppercase; letter-spacing:0.5pt; }
-p                             { font-size:11pt; line-height:14pt; }
+p                             { font-size:11pt; line-height:14pt; margin:15px 0;}
+h6                            { margin:15px 0; }
 .small                        { font-size:8pt; }  
 span.blue                     { color:#0f4964; }
 .todo                         { color:#ff0000; }
