--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,5 @@
 html, body                    { margin:0; padding:0; text-align:center; font-family:Lucida Sans Unicode, Lucida Grande, sans-serif; font-size:12pt; color:#676767; }
-#main_container               { width:977px; margin:0 auto; text-align:left; }
+#main_container               { position:relative; width:977px; margin:0 auto; padding-bottom:120px; text-align:left; }
 .clear                        { clear:both; }
 .tooltip                      { display:none;}
 
@@ -52,7 +52,7 @@ body.blue_short #content_main_inner { padding-top:100px; }
 #content_reg_funnel           { position:relative; width:100%; padding-top:80px; }
 
 /* Footer */
-#footer                       { width:100%; height:87px; text-align:center; margin-top:50px; border-top:3px solid #d9d9d9; background:url(../images/footer_bg.png) repeat-x; }
+#footer                       { width:100%; height:87px; text-align:center; margin-top:0px; border-top:3px solid #d9d9d9; background:url(../images/footer_bg.png) repeat-x; }
 #footer_inner                 { position:relative; width:977px; margin:0 auto; height:87px; text-align:left; }
 #footer_menu1                 { position:absolute; top:10px; font-size:10pt;}
 #footer_menu1 ul.menu         { list-style:none; }
